Added about text

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
       <div class="main-content">
         {{>header}}
         <img src="/img/kevin.JPG" class="portrait">
+        <p>I'm Kevin Shewey and I made this site!  It uses data from mapbox.com and darksky.net!</p>
         <p>I'm {{name}} and I approved this web page</p>
       </div>
       {{>footer}}
